fix spacing of settings elements

--- a/frontend/stylesheets/trace_view/_right_menu.less
+++ b/frontend/stylesheets/trace_view/_right_menu.less
@@ -120,3 +120,7 @@
     margin-right: 0px;
   }
 }
+
+.margin-bottom {
+  margin-bottom: 10px;
+}
